<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tvResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/your_result_is_ready"
        android:textColor="@color/green_accent"
        android:textSize="@dimen/text_size_large"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.400" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/b_open_file"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/margin_large"
        android:background="@drawable/bg_round_corners_green"
        android:paddingHorizontal="@dimen/padding_large"
        android:paddingVertical="@dimen/padding_middle"
        android:text="@string/open_file"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvResult" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/b_share_file"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/margin_large"
        android:background="@drawable/bg_round_corners_green"
        android:paddingHorizontal="@dimen/padding_large"
        android:paddingVertical="@dimen/padding_middle"
        android:text="@string/share_file"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/b_open_file" />

</androidx.constraintlayout.widget.ConstraintLayout>