<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true">

    <TextView
        android:id="@+id/tv_question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="32dp"
        android:textColor="@color/green_accent"
        android:textSize="@dimen/text_size_large"
        app:layout_constraintBottom_toTopOf="@id/rg_answers"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="@string/question_1" />

    <RadioGroup
        android:id="@+id/rg_answers"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_middle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/answer_1"
            style="@style/RadioButtonQuizStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@drawable/bg_answer_radio_btn"
            tools:text="@string/answer_1_1" />

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/answer_2"
            style="@style/RadioButtonQuizStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@drawable/bg_answer_radio_btn"
            tools:text="@string/answer_1_2" />

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/answer_3"
            style="@style/RadioButtonQuizStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@drawable/bg_answer_radio_btn"
            tools:text="@string/answer_1_3" />

    </RadioGroup>

    <androidx.constraintlayout.widget.Group
        android:id="@+id/dogs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:constraint_referenced_ids="iv_dog_center_top,iv_dog_left_bottom,iv_dog_left_top,iv_dog_right_bottom" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_dog_right_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_dog1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_dog_left_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_dog2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_dog_center_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_dog3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_dog_left_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_middle"
        android:src="@drawable/ic_dog4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatCheckBox
        android:id="@+id/b_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@drawable/bg_foot_check_box"
        android:button="@null"
        android:checked="false"
        android:clickable="false"
        android:focusable="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rg_answers" />

</androidx.constraintlayout.widget.ConstraintLayout>